moved model layer into main layer

--- a/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -50,24 +50,37 @@ ShortcutCreationWizard_ReferencedElementSelectionPageEmptyError=Referenziertes E
 ShortcutCreationWizard_ReferencedElementSelectionPageInvalidError=Ungültiges referenziertes Element ist ausgewählt
 ModelElementSelectionPageMessage=Wähle Modell-Element:
 ValidateActionMessage=Validieren
-Container1Group_title=Container
-Container1Group_desc=Container-Elemente für Untereditoren
-Controllers2Group_title=Controller
-Controllers2Group_desc=Controller-Elemente
-Actions3Group_title=Aktionen
-Actions3Group_desc=Aktions-Elements
-Model1CreationTool_title=Model
-Model1CreationTool_desc=Neuen Container zur Datenspeicherung erstellen
-Settings2CreationTool_title=Einstellungen
-Settings2CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
-Admin3CreationTool_title=Admin
-Admin3CreationTool_desc=Neuen Controller mit Admin-Rolle erstellen
-User4CreationTool_title=User
-User4CreationTool_desc=Neuen Controller mit Benutzer-Rolle erstellen
-Ajax5CreationTool_title=Ajax
-Ajax5CreationTool_desc=Neuen Ajax Controller erstellen
-Customcontroller6CreationTool_title=Individuell
-Customcontroller6CreationTool_desc=Neuen individuellen Controller erstellen
+
+Maintools1Group_title=Basis-Werkzeuge
+Maintools1Group_desc=Grundlegende Container-Elemente
+Actions2Group_title=Aktionen
+Actions2Group_desc=Aktions-Elemente
+Fieldtypes3Group_title=Feld-Typen
+Fieldtypes3Group_desc=Entitäts-Feld-Elemente
+VarTypes4Group_title=Var-Typen
+VarTypes4Group_desc=Variablen-Elemente
+Links5Group_title=Links
+Links5Group_desc=Beziehungs-Elemente
+
+Entity1CreationTool_title=Entität
+Entity1CreationTool_desc=Neue Daten-Entität erstellen
+EntityIndex2CreationTool_title=Entitäts-Index
+EntityIndex2CreationTool_desc=Neuen Entitäts-Index erstellen
+EntityIndexItem3CreationTool_title=Index-Eintrag
+EntityIndexItem3CreationTool_desc=Neuen Index-Eintrag erstellen
+Variables4CreationTool_title=Variablen
+Variables4CreationTool_desc=Neuen Container für Variablen erstellen
+Admincontroller5CreationTool_title=Admin-Controller
+Admincontroller5CreationTool_desc=Neuen Controller mit Admin-Rolle erstellen
+Usercontroller6CreationTool_title=User-Controller
+Usercontroller6CreationTool_desc=Neuen Controller mit Benutzer-Rolle erstellen
+Ajaxcontroller7CreationTool_title=Ajax-Controller
+Ajaxcontroller7CreationTool_desc=Neuen Ajax-Controller erstellen
+Customcontroller8CreationTool_title=Eigener Controller
+Customcontroller8CreationTool_desc=Neuen individuellen Controller erstellen
+Settings9CreationTool_title=Einstellungen
+Settings9CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
+
 Main1CreationTool_title=Main
 Main1CreationTool_desc=Neue Main Aktion erstellen
 View2CreationTool_title=View
@@ -78,8 +91,68 @@ Edit4CreationTool_title=Edit
 Edit4CreationTool_desc=Neue Edit Aktion erstellen
 Delete5CreationTool_title=Delete
 Delete5CreationTool_desc=Neue Delete Aktion erstellen
-Customaction6CreationTool_title=Individuelle Aktion
+Customaction6CreationTool_title=Eigene Aktion
 Customaction6CreationTool_desc=Neue individuelle Aktion erstellen
+
+Boolean1CreationTool_title=Boolean
+Boolean1CreationTool_desc=Ein Boolean-Feld
+Integer2CreationTool_title=Integer
+Integer2CreationTool_desc=Ein Integer-Feld
+Decimal3CreationTool_title=Dezimalzahl
+Decimal3CreationTool_desc=Ein Decimal-Feld
+String4CreationTool_title=String
+String4CreationTool_desc=Ein String-Feld
+Text5CreationTool_title=Text
+Text5CreationTool_desc=Ein Text-Feld
+Email6CreationTool_title=E-Mail
+Email6CreationTool_desc=Ein E-Mail-Feld
+Url7CreationTool_title=URL
+Url7CreationTool_desc=Ein URL-Feld
+Upload8CreationTool_title=Upload
+Upload8CreationTool_desc=Ein Upload-Feld
+List9CreationTool_title=Liste
+List9CreationTool_desc=Ein Listen-Feld
+ListFieldItem10CreationTool_title=Listen-Eintrag
+ListFieldItem10CreationTool_desc=Ein Listen-Eintrag
+User11CreationTool_title=Benutzer
+User11CreationTool_desc=Ein User-Feld
+Array12CreationTool_title=Array
+Array12CreationTool_desc=Ein Array-Feld
+Object13CreationTool_title=Objekt
+Object13CreationTool_desc=Ein Objekt-Feld
+Datetime14CreationTool_title=Zeitstempel
+Datetime14CreationTool_desc=Ein Timestamp-Feld
+Date15CreationTool_title=Datum
+Date15CreationTool_desc=Ein Date-Feld
+Time16CreationTool_title=Zeit
+Time16CreationTool_desc=Ein Time-Feld
+Float17CreationTool_title=Fließkommazahl
+Float17CreationTool_desc=Ein Float-Feld
+ 
+BoolVar1CreationTool_title=Bool Var
+BoolVar1CreationTool_desc=Ein Boolean-Feld
+IntegerVar2CreationTool_title=Int Var
+IntegerVar2CreationTool_desc=Ein Integer-Feld
+TextVar3CreationTool_title=Text Var
+TextVar3CreationTool_desc=Ein simples String-Feld
+FilePathVar4CreationTool_title=Dateipfad Var
+FilePathVar4CreationTool_desc=Ein Verzeichnispfad-Feld
+ListVar5CreationTool_title=Liste Var
+ListVar5CreationTool_desc=Eine Liste von Werten
+ListVarItem6CreationTool_title=Listen-Eintrag
+ListVarItem6CreationTool_desc=Ein Listen-Eintrag
+
+OneToOneRelationship1CreationTool_title=Eins-Zu-Eins-Beziehung
+OneToOneRelationship1CreationTool_desc=Eine Entität einer anderen zuweisen
+OneToManyRelationship2CreationTool_title=Eins-Zu-Viele-Beziehung
+OneToManyRelationship2CreationTool_desc=Eine Entität mehreren anderen zuweisen
+ManyToOneRelationship3CreationTool_title=Viele-Zu-Eins-Beziehung
+ManyToOneRelationship3CreationTool_desc=Mehrere Entitäten einer anderen zuweisen
+ManyToManyRelationship4CreationTool_title=Viele-Zu-Viele-Beziehung
+ManyToManyRelationship4CreationTool_desc=Mehrere Entitäten mehreren anderen zuweisen
+InheritanceRelationship5CreationTool_title=Vererbungs-Beziehung
+InheritanceRelationship5CreationTool_desc=Eine Entität von einer anderen erben lassen
+
 DiagramEditorActionBarAdvisor_DefaultFileEditorTitle=Fehler
 DiagramEditorActionBarAdvisor_DefaultFileEditorMessage=Es ist kein Editor registriert für die Datei "{0}"
 DiagramEditorActionBarAdvisor_DefaultEditorOpenErrorTitle=Offener Editor
@@ -97,11 +170,18 @@ WizardNewFileCreationPage_BrowseButton=Durchsuchen
 WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
 WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
+FieldsEditPart_title=Felder
+EntityIndexesEditPart_title=Indexe
+ListFieldItemsEditPart_title=Einträge
+IndexItemsEditPart_title=Einträge
+ModuleVariablesEditPart_title=Variablen
+ListVarItemsEditPart_title=Einträge
+AdminActionsEditPart_title=Aktionen
+UserActionsEditPart_title=Aktionen
+AjaxActionsEditPart_title=Aktionen
+CustomActionsEditPart_title=Aktionen
 
 CommandName_OpenDiagram=Diagramm öffnen
-AbstractParser_UnexpectedValueType=Wert vom Typ {0} wird erwartet
-AbstractParser_WrongStringConversion=String-Wert kann nicht in Wert {0} konvertiert werden
-AbstractParser_UnknownLiteral=Unbekanntes Literal: {0}
 
 MessageFormatParser_InvalidInputError=Ungültige Eingabe bei {0}
 ModulestudioModelingAssistantProviderTitle=Wähle Domänen-Modell-Element
