--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -6,11 +6,13 @@ MostDslValidator.ActionNameShouldBeLonger=Der Name der Aktion sollte eine Länge 
 MostDslValidator.ActionNeedsController=Die Aktion muss einem Controller zugewiesen werden.
 MostDslValidator.ActionNeedsName=Die Aktion muss einen Namen haben.
 MostDslValidator.ApplicationEmailAddressIsInvalid=Der Wert für die E-Mail-Adresse der Anwendung muss eine gültige E-Mail-Adresse sein.
+MostDslValidator.ApplicationHasHighEntityAmount=Die Anzahl an Entitäten wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
 MostDslValidator.ApplicationHasMultipleAdminControllers=Es darf nicht mehr als ein Admin-Controller existieren.
 MostDslValidator.ApplicationHasMultipleAjaxControllers=Es darf nicht mehr als ein Ajax-Controller existieren.
-MostDslValidator.ApplicationHasMultipleLeadingEntities=Genau eine Entität muss als führend deklariert werden (leading=true).
+MostDslValidator.ApplicationHasMultipleLeadingEntities=Die Anwendung darf nur eine als führend markierte Entität beinhalten.
 MostDslValidator.ApplicationHasMultipleSettingsContainers=Die Anwendung darf nur einen Einstellungscontainer beinhalten.
 MostDslValidator.ApplicationHasMultipleUserControllers=Es darf nicht mehr als ein User-Controller existieren.
+MostDslValidator.ApplicationHasNoLeadingEntity=Die Anwendung benötigt eine als führend markierte Entität.
 MostDslValidator.ApplicationImportMinVersionIsInvalid=Die minimale Version muss dem Muster x.y.z entsprechen.
 MostDslValidator.ApplicationImportMinVersionMustNotBeGreaterThanMaxVersion=Die minimale Version darf nicht größer sein als die maximale Version.
 MostDslValidator.ApplicationImportMaxVersionIsInvalid=Die maximale Version muss dem Muster x.y.z entsprechen.
@@ -24,9 +26,10 @@ MostDslValidator.ApplicationNeedsAdminController=Du musst einen Admin-Controller
 MostDslValidator.ApplicationNeedsAuthor=Die Anwendung muss einen Autor haben.
 MostDslValidator.ApplicationNeedsController=Die Anwendung muss mindestens einen Controller enthalten.
 MostDslValidator.ApplicationNeedsEmailAddress=Die Anwendung muss eine E-Mail-Adresse haben.
-MostDslValidator.ApplicationNeedsModelContainer=Die Anwendung muss mindestens einen Model-Container enthalten.
+MostDslValidator.ApplicationNeedsEntity=Die Anwendung muss mindestens eine Entität enthalten.
 MostDslValidator.ApplicationNeedsName=Die Anwendung muss einen Namen haben.
 MostDslValidator.ApplicationNeedsPrefix=Die Anwendung muss ein Präfix für seine Datenbank-Tabellen haben.
+MostDslValidator.ApplicationNeedsVarsForViewAction=Es ist empfohlen, zwei Integer-Variablen namens pageSize und showOnlyOwnEntries zur Steuerung des Verhaltens der view-Aktion hinzuzufügen.
 MostDslValidator.ApplicationNeedsVendor=Die Anwendung muss einen Anbieter haben.
 MostDslValidator.ApplicationNeedsVersion=Die Anwendung muss eine Version haben.
 MostDslValidator.ApplicationPrefixIsInvalidIdentifier=Das Präfix muss ein gültiger Bezeichner in Kleinbuchstaben sein (z. B. keine Leerzeichen oder Sonderzeichen).
@@ -194,7 +197,7 @@ MostDslValidator.EntityNameMustNotEqualApplication=Eine Entität darf nicht den g
 MostDslValidator.EntityNameShouldBeLonger=Der Name der Entität sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.EntityNameShouldStartWithLowerCase=Der Name der Entität sollte mit einem Kleinbuchstaben beginnen.
 MostDslValidator.EntityNeedsField=Jede Tabelle muss mindestens ein Feld enthalten oder Felder von einer Elterntabelle erben.
-MostDslValidator.EntityNeedsModelContainer=Die Entität muss einem Model-Container zugewiesen werden.
+MostDslValidator.EntityNeedsApplication=Die Entität muss einer Anwendung zugewiesen werden.
 MostDslValidator.EntityNeedsName=Jede Entität muss einen Namen haben.
 MostDslValidator.EntityNeedsNameMultiple=Jede Entität muss einen Namen für mehrere Instanzen haben.
 MostDslValidator.EntityOptimisticLockingNeedsVersionField=Entitäten mit optimistischem Locking müssen ein Feld enthalten, das als Versionsfeld deklariert ist.
@@ -225,16 +228,6 @@ MostDslValidator.EntityTreeMustNotContainReservedSource=Daher darf Deine Referen
 MostDslValidator.EntityTreeMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslValidator.EntityWithArchiveRequiresEndDate=Entitäten mit einem Archiv müssen ein Zeitstempel- oder Datumsfeld enthalten, welches als Enddatum ausgezeichnet ist.
 MostDslValidator.EntityWithEnhancedWorkflowNeedsStandardFields=Entitäten mit erweiterten Workflows benötigen Standardfelder zur Identifikationd es Erstellers.
-MostDslValidator.ModelContainerHasHighEntityAmount=Die Anzahl an Entitäten wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
-MostDslValidator.ModelContainerHasMultipleLeadingEntities=Der Model-Container darf nur eine als führend markierte Entität beinhalten.
-MostDslValidator.ModelContainerHasNoLeadingEntity=Der Model-Container benötigt eine als führend markierte Entität.
-MostDslValidator.ModelContainerNameMustBeLonger=Der Name des Model-Containers muss eine Länge von mindestens drei Zeichen haben.
-MostDslValidator.ModelContainerNameShouldBeLonger=Der Name des Model-Containers sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.ModelContainerNeedsApplication=Der Model-Container muss einer Anwendung zugewiesen werden.
-MostDslValidator.ModelContainerNeedsEntity=Der Model-Container muss mindestens eine Entität enthalten.
-MostDslValidator.ModelContainerNeedsName=Der Model-Container muss einen Namen haben.
-MostDslValidator.ModelContainerNeedsVarsForViewAction=Es ist empfohlen, zwei Integer-Variablen namens pageSize und showOnlyOwnEntries zur Steuerung des Verhaltens der view-Aktion hinzuzufügen.
-MostDslValidator.ModelContainersMustBeUnique=Die Namen der Model-Container müssen eindeutig sein.
 MostDslValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen): {0}.
 MostDslValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField=Bitte benenne das Feld {0} um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
 MostDslValidator.RelationshipInheritanceNeedsDiscriminatorColumn=Das Attribut discriminatorColumn darf nicht leer sein für Vererbungsbeziehungen.
@@ -269,7 +262,7 @@ MostDslValidator.RelationshipJoinSourceAliasNameShouldBeLonger=Das Quell-Alias d
 MostDslValidator.RelationshipJoinTargetAliasesMustBeUnique=Die Ziel-Aliase der Beziehung müssen eindeutig sein für alle ausgehenden Beziehungen einer Entität.
 MostDslValidator.RelationshipJoinTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipJoinTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.RelationshipNeedsModelContainer=Die Beziehung muss einem Model-Container zugewiesen werden.
+MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung zugewiesen werden.
 MostDslValidator.RelationshipNeedsSourceEntity=Jede Beziehung muss eine Quell-Entität haben.
 MostDslValidator.RelationshipNeedsTargetEntity=Jede Beziehung muss eine Ziel-Entität haben.
 MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
@@ -285,7 +278,7 @@ MostDslValidator.VariableNameMustNotReferenceEntity=Eine Variable darf nicht den
 MostDslValidator.VariableNameShouldBeLonger=Der Name der Variable sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.VariableNeedsContainer=Die Variable muss einem Container zugewiesen werden.
 MostDslValidator.VariableNeedsName=Jede Variable muss einen Namen haben.
-MostDslValidator.VariableNeedsVarContainer=Der Variablen-Container muss einem Model-Container zugewiesen werden.
+MostDslValidator.VariableNeedsApplication=Der Variablen-Container muss einer Anwendung zugewiesen werden.
 MostDslLinkingDiagnosticMessageProvider.ButFound=\ aber gefunden wurden 
 MostDslLinkingDiagnosticMessageProvider.ButFound1Candidate=\ aber gefunden wurde 1 Kandidat.
 MostDslLinkingDiagnosticMessageProvider.Candidates=\ Kandidaten.
