--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -20,8 +20,7 @@ MostDslQuickfixProvider.AddAjaxController=Ajax-Controller hinzufügen
 MostDslQuickfixProvider.AddAListFieldToTheEntity=Ein Listenfeld zur Entität '{0}' hinzufügen
 MostDslQuickfixProvider.AddAListVariableTo=Eine Listen-Variable zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAMainActionToTheController=Eine Main-Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddAModelContainer=Einen Modell-Container hinzufügen
-MostDslQuickfixProvider.AddAModelContainerTo=Einen Modell-Container zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnEntityTo=Eine Entität zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnAdminControllerToTheContainer=Einen Admin-Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddAnAjaxControllerToTheContainer=Einen Ajax-Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddANameForThisAction=Einen Namen für diese Aktion hinzufügen
@@ -93,7 +92,6 @@ MostDslQuickfixProvider.AddListVar=List-Var hinzufügen
 MostDslQuickfixProvider.AddMainAction=Main-Aktion hinzufügen
 MostDslQuickfixProvider.AddMaxVersion=Max Version hinzufügen
 MostDslQuickfixProvider.AddMinVersion=Min Version hinzufügen
-MostDslQuickfixProvider.AddModelContainer=Modell-Container hinzufügen
 MostDslQuickfixProvider.AddMultipleName=Mehrfachname hinzufügen
 MostDslQuickfixProvider.AddName=Name hinzufügen
 MostDslQuickfixProvider.AddNameOfApplicationAuthor=Name des Autors der Anwendung hinzufügen
@@ -145,9 +143,9 @@ MostDslQuickfixProvider.CorrectVendor=Anbieter korrigieren
 MostDslQuickfixProvider.CreateACustomControllerAndAssignTheActionToIt=Einen eigenen Controller erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateAdminController=Admin-Controller erstellen
 MostDslQuickfixProvider.CreateAModelContainerAndAssignTheEntityToIt=Einen Model-Container erstellen und die Entität zuordnen
-MostDslQuickfixProvider.CreateAModelContainerAndAssignTheVarContainerToIt=Einen Model-Container erstellen und den Var-Container zuordnen
 MostDslQuickfixProvider.CreateAnAdminControllerAndAssignTheActionToIt=Einen Admin-Controller erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateAnApplicationAndAssignTheContainerToIt=Eine Anwendung erstellen und den Container zuordnen
+MostDslQuickfixProvider.CreateAnApplicationAndAssignTheRelationshipToIt=Eine Anwendung erstellen und die Beziehung zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheFieldToIt=Eine Entität erstellen und das Feld zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheIndexToIt=Eine Entität erstellen und den Index zuordnen
 MostDslQuickfixProvider.CreateAnEntityIndexAndAssignTheIndexItemToIt=Einen Entitäts-Index erstellen und den Index-Eintrag zuordnen
@@ -157,7 +155,6 @@ MostDslQuickfixProvider.CreateAVarContainerAndAssignTheVariableWithIt=Einen Var-
 MostDslQuickfixProvider.CreateCustomController=Eigenen Controller erstellen
 MostDslQuickfixProvider.CreateEntity=Entität erstellen
 MostDslQuickfixProvider.CreateIndex=Index erstellen
-MostDslQuickfixProvider.CreateModelContainer=Modell-Container erstellen
 MostDslQuickfixProvider.CreateUserController=User-Controller erstellen
 MostDslQuickfixProvider.CreateVarContainer=Var-Container erstellen
 MostDslQuickfixProvider.DecreaseLengthOfIntegerFieldTo=Länge des Integer-Feldes auf 18 reduzieren
@@ -186,7 +183,6 @@ MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfFieldToASensitiveMinimumValue=Länge des Feldes auf einen vernünftigen Minimalwert erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordAction=Länge des Namens erhöhen durch Anhängen des Wortes Action
-MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordContainer=Länge des Namens erhöhen durch Anhängen des Wortes Container
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordController=Länge des Namens erhöhen durch Anhängen des Wortes Controller
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordField=Länge des Namens erhöhen durch Anhängen des Wortes Field
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordIndex=Länge des Namens erhöhen durch Anhängen des Wortes Index
